Fixes for squished allsessions report in edit mode, lang strings, sesscourses in session_report_viewed optional.

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,10 @@
     font-size: 0.8em;
 }
 
+.path-mod-attendance div.allsessionssummary + form#attendancetakeform > div {
+    width: 100%;
+}
+
 .path-mod-attendance table.controls {
     text-align: center;
     width: 100%;
